
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int f ;
 int fclose (int ) ;
 int fname ;
 int fopen (int ,char*) ;
 int fwrite (int *,int,int,int ) ;
 int * pparr ;
 int printf (char*) ;

int main()
{
 f=fopen(fname,"wb+");
 fwrite(&pparr[0],1,11833,f);
 fclose(f);
 printf("Extract the archive and open PowerPoint file.!\n");
 return 0;
}
